# gameboy-emulator

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  README_LINUX.md  gmock.cmake  gtest.cmake  requirements.txt
.run/: project.run.xml.in
Tests/: Test.cpp
external_src/imgui-1.81/: CMakeLists.txt
external_src/nativefiledialog/: CMakeLists.txt
labhelper/: CMakeLists.txt  Model.cpp  Model.h  fbo.cpp  fbo.h  hdr.cpp  hdr.h  imgui_impl_sdl_gl3.cpp  labhelper.cpp  labhelper.h
project/: CMakeLists.txt  main.cpp  shading.vert  simple.frag
roms/asm/: boot_g_tile.asm  boot_lameboy.asm  boot_lameboy_big.asm
roms/gb/: boot_g_tile.gb  boot_lameboy.gb  boot_lameboy_big.gb
roms/instr_timing/source/common/: timer.s
scenes/: NewShip.mtl  landingpad.mtl  roughness_test_balls.mtl  sphere.mtl
scenes/envmaps/: 001_dl_0.hdr  001_dl_1.hdr  001_dl_2.hdr  001_dl_3.hdr  001_dl_4.hdr  001_dl_5.hdr  001_dl_6.hdr  001_dl_7.hdr  001_irradiance.hdr
src/: AppSettings.cpp  AppSettings.h  AppTimer.h  Application.cpp  Application.h  AudioController.cpp  AudioController.h  CMakeLists.txt  Controller.cpp  Controller.h  ErrorReport.h  FileExplorer.cpp  FileExplorer.h  FileHelper.cpp  FileHelper.h  Gui.cpp  Gui.h  GuiView.cpp  GuiView.h  Keybinds.cpp  Keybinds.h  Palette.h  RenderView.cpp  RenderView.h  Timer.cpp  Timer.h  View.cpp  View.h  main.cpp  temp_screen_helper.cpp  temp_screen_helper.h
src/Application/: AppSettings.h  Application.cpp  Application.h  Keybinds.h
src/IO/: AudioController.cpp  AudioController.h  CMakeLists.txt  Controller.cpp  Controller.h  FileExplorer.cpp  FileExplorer.h  Gui.h  GuiView.cpp  GuiView.h  Joypad.cpp  Palette.h  PaletteHandler.cpp  PaletteHandler.h  RenderView.cpp  RenderView.h  View.h  shaders.h  title.pixdata
src/IO/shaders/: palette.vert
src/application/: AppSettings.cpp  AppSettings.h  Application.cpp  Application.h  CMakeLists.txt  Game-Boy-FL.cpp  KeyBinds.cpp  KeyBinds.h  Keybinds.cpp  State.h
src/gameboy/: CMakeLists.txt  CPU.cpp  CPU.h  Cartridge.cpp  Cartridge.h  Definitions.h  Flags.h  GameBoy.cpp  GameBoy.h  Joypad.cpp  Joypad.h  MBC.cpp  MBC.h  MMU.cpp  MMU.h  PPU.cpp  PPU.h  Sprite.cpp  Sprite.h  Timer.cpp  Timer.h  cpu.cpp  cpu.h  gameboy.cpp  gameboy.h  mmu.cpp  mmu.h  ppu.cpp  ppu.h  register_pair.h  separate_register.h
src/gameboy/APU/: APU.cpp  APU.h  APUState.h  IVolumeController.h
src/gameboy/CPU/: CPU.cpp  CPU.h  Flags.h  RegisterPair.h
src/gameboy/MMU/: Cartridge.cpp  Cartridge.h  MBC.cpp  MBC.h  MMU.cpp  MMU.h  Timer.cpp  Timer.h
src/gameboy/PPU/: PPU.cpp  PPU.h  Sprite.cpp  Sprite.h
src/helpers/: AppTimer.cpp  AppTimer.h  CMakeLists.txt  ErrorReport.h
src/shaders/: background.frag  palette.frag  shading.frag  simple.vert  test.frag  test.vert
tests/: CMakeLists.txt  audio_test.cpp  cpuTest.cpp  cpu_test.cpp  gmock.cmake  gtest.cmake  mmu_test.cpp  ppu_test.cpp  register_pair_test.cpp  test.cpp  tests.cpp
tests/gtest/: CMakeLists.txt
tests/gtest/docs/: advanced.md
tests/gtest/googlemock/include/gmock/: gmock-matchers.h  gmock-nice-strict.h
tests/gtest/googlemock/scripts/: fuse_gmock_files.py
tests/gtest/googlemock/src/: gmock-spec-builders.cc
tests/gtest/googlemock/test/: gmock_output_test.py  gmock_test_utils.py
tests/gtest/googletest/: README.md
tests/gtest/googletest/include/gtest/internal/: gtest-port.h
tests/gtest/googletest/scripts/: common.py  release_docs.py
tests/gtest/googletest/test/: googletest-break-on-failure-unittest.py  googletest-catch-exceptions-test.py  googletest-catch-exceptions-test_.cc  googletest-color-test.py  googletest-death-test-test.cc  googletest-env-var-test.py  googletest-env-var-test_.cc  googletest-failfast-unittest.py  googletest-filter-unittest.py  googletest-list-tests-unittest.py  googletest-options-test.cc  googletest-output-test.py  googletest-output-test_.cc  googletest-param-test-invalid-name1-test.py  googletest-param-test-invalid-name2-test.py  googletest-param-test2-test.cc  googletest-port-test.cc  googletest-setuptestsuite-test.py  googletest-shuffle-test.py  googletest-throw-on-failure-test.py  googletest-throw-on-failure-test_.cc  googletest-uninitialized-test.py  gtest_unittest.cc
